# jayaremala

./: .env.example  .gitignore  CLAUDE.md  README.md
.github/workflows/: deploy.yml  weekly-digest.yml
backend/: Dockerfile  Procfile  pyproject.toml  railway.toml
backend/data/: gv_legacy_comments.json
backend/data/gradevitian/: regulation_chunks.json
backend/data/knowledge/: apps.json  blog.json  education.json  experience.json  gallery.json  inbox_signals.json  lab.json  profile.json  projects.json  quotes.json  skills.json  testimonials.json
backend/scripts/: parse_regulations.py
backend/src/app/: main.py  mcp_server.py
backend/src/app/agent/: tools.py
backend/src/app/core/: gv_auth.py  gv_moderation.py  limiter.py  settings.py
backend/src/app/db/: analytics.py  blog_stats.py  content.py  gradevitian.py
backend/src/app/integrations/: calendar.py  digest.py  drive.py  gmail.py  google_auth.py
backend/src/app/obs/: trace.py
backend/src/app/rag/: graph.py  gv_rulebook.py  ingest.py  store.py
backend/src/app/routers/: admin.py  ai.py  blog.py  content.py  gradevitian.py  stats.py  tools.py
backend/tests/: conftest.py  test_gradevitian.py
docs/superpowers/plans/: 2026-06-25-gradevitian-admin-metrics.md
docs/superpowers/specs/: 2026-06-24-scroll-reactive-hero-wordmark-design.md  2026-06-25-gradevitian-admin-metrics-design.md
frontend/: GRADEVITIAN.md  next.config.ts  package-lock.json  package.json
frontend/public/: CNAME  manifest.webmanifest  sw.js
frontend/public/gradevitian/: manifest.webmanifest  robots.txt  sitemap.xml  sw.js
frontend/scripts/: gen-gv-icons.mjs  gen-pwa-icons.mjs
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  robots.ts  sitemap.ts
frontend/src/components/: AuroraBackground.tsx  AvocadoChatButton.tsx  AvocadoLoader.tsx  Breadcrumbs.tsx  ColorThemePicker.tsx  ContactForm.tsx  CursorTrail.tsx  Footer.tsx  GalleryGrid.tsx  GradeVITianSpotlight.tsx  GridBackground.tsx  HeroAvocado.tsx  HeroDotGrid.tsx  HeroName.tsx  HeroStats.tsx  InstallPWA.tsx  IntroScreen.tsx  JsonLd.tsx  LabList.tsx  LiquidWave.tsx  McpExplorer.tsx  MobileAvocadoFAB.tsx  MobileNoBg.tsx  Nav.tsx  PWARegister.tsx  PageTransition.tsx  Parallax.tsx  ParallaxImage.tsx  ParticleBackground.tsx  ProjectsGrid.tsx  QuotesClient.tsx  (+24 more)
infra/nginx/: api.jayaremala.com.conf  gradevitian.conf
infra/scripts/: backup.sh  deploy.sh  rollback.sh
scripts/: gen-gv-sitemap.mjs  sync-blog.mjs  sync-knowledge.mjs
(+212 files in other folders)
