[project]
name = "portfolio-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "google-genai>=1.0",
  "chromadb>=0.5",
  "fastembed>=0.4",
  "rank-bm25>=0.2",
  "slowapi>=0.1.9",
  "google-auth>=2.28",
  "google-auth-oauthlib>=1.2",
  "google-api-python-client>=2.120",
  "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.5",
]

[tool.ruff]
line-length = 100

